--- a/src/app/book/book-list/book-list.component.html
+++ b/src/app/book/book-list/book-list.component.html
@@ -1,7 +1,10 @@
-<div fxLayout fxLayoutAlign="center center">
-  <mat-form-field fxFlex="40%">
-    <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filter">
+<div fxLayout fxLayout.lt-md="column wrap" fxLayoutAlign="center center" fxLayoutGap.gt-sm="250px" fxLayoutGap.lt.md="20px">
+  <mat-form-field>
+    <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Buscar Título">
   </mat-form-field>
+  <div>
+    <a [routerLink]="['/book/create']" mat-button color="primary">Cadastrar Livro</a>
+  </div>
 </div>
 <table mat-table [dataSource]="dataSource" matSort>
   <ng-container matColumnDef="title">
