--- a/src/app/book/book-list/book-list.component.html
+++ b/src/app/book/book-list/book-list.component.html
@@ -29,7 +29,7 @@
 
   <ng-container matColumnDef="value">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor </th>
-    <td mat-cell *matCellDef="let element"> {{element.value}} </td>
+    <td mat-cell *matCellDef="let element">R$ {{element.value}} </td>
   </ng-container>
 
   <ng-container matColumnDef="details">
@@ -42,7 +42,7 @@
   </ng-container>
 
   <ng-container matColumnDef="update">
-      <th mat-header-cell *matHeaderCellDef> Atualizar </th>
+      <th mat-header-cell *matHeaderCellDef> Editar </th>
       <td mat-cell *matCellDef="let element">
         <button mat-icon-button color="accent" (click)="redirectToUpdate(element.id)">
             <mat-icon class="mat-18">system_update</mat-icon>
@@ -62,5 +62,11 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-<mat-paginator [pageSize]="10"  [pageSizeOptions]="[2, 4, 6, 10, 20]" (page)="pageChanged($event)">
+<mat-paginator
+  [pageSize]="pageSize"
+  [length]="length"
+  showFirstLastButtons
+  [pageIndex]="currentPage"
+  [pageSizeOptions]="[2, 4, 6, 10, 20]"
+  (page)="pageChanged($event)" >
 </mat-paginator>
