--- a/src/app/author/author-create/author-create.component.html
+++ b/src/app/author/author-create/author-create.component.html
@@ -1,6 +1,6 @@
 <section fxLayout="row wrap" fxLayoutAlign="center center">
   <mat-card fxFlex="500px" fxFlex.xs="100%">
-      <mat-card-title>Cadastro de livro</mat-card-title>
+      <mat-card-title>Cadastrar Autor</mat-card-title>
       <form [formGroup]="authorForm" autocomplete="off" novalidate (ngSubmit)="createAuthor(authorForm.value)" fxLayout="column wrap"
       fxLayoutAlign="center center" fxLayoutGap="10px">
 
