--- a/src/app/book/book-details/book-details.component.html
+++ b/src/app/book/book-details/book-details.component.html
@@ -41,6 +41,9 @@
         </div>
       </mat-card-content>
       <mat-card-actions>
+        <mat-card-actions align="center">
+          <button type="button" mat-raised-button color="warn" (click)="onBack()">Voltar</button>
+        </mat-card-actions>
       </mat-card-actions>
     </mat-card>
 </section>
