--- a/src/app/shared/dialogs/success-dialog/success-dialog.component.html
+++ b/src/app/shared/dialogs/success-dialog/success-dialog.component.html
@@ -1,7 +1,7 @@
 <section fxLayout="column" fxLayoutAlign="center center">
-  <h1 mat-dialog-title>Success message</h1>
+  <h1 mat-dialog-title>Sucesso</h1>
   <mat-dialog-content>
-    <p>Action completed successfully</p>
+    <p>Ação realizada com sucesso !</p>
   </mat-dialog-content>
   <mat-dialog-actions>
     <button mat-raised-button color="primary" [mat-dialog-close]="true">OK</button>
