--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -18,6 +18,9 @@
           <li>
             <a routerLink="/subject/subjects">Assuntos</a>
         </li>
+        <li>
+          <a routerLink="/report">Relatório</a>
+      </li>
       </ul>
   </div>
 </mat-toolbar>
