--- a/src/app/subject/subject-update/subject-update.component.html
+++ b/src/app/subject/subject-update/subject-update.component.html
@@ -1,26 +1,52 @@
 <section fxLayout="row wrap" fxLayoutAlign="center center">
   <mat-card fxFlex="500px" fxFlex.xs="100%">
-      <mat-card-title>Atualizar Assunto</mat-card-title>
-      <form [formGroup]="subjectForm" autocomplete="off" novalidate (ngSubmit)="updateSubject(subjectForm.value)" fxLayout="column wrap"
-      fxLayoutAlign="center center" fxLayoutGap="10px">
-
-        <mat-card-content>
-          <mat-form-field>
-            <input matInput type="text" placeholder="Nome" formControlName="description" id="description">
-            <mat-hint align="end">Insira o assunto.</mat-hint>
-            <mat-error *ngIf="hasError('description', 'required')">Assunto é obrigatório.</mat-error>
-            <mat-error *ngIf="hasError('description', 'maxlength')">Tamanho máximo permitido 20 caractéres.</mat-error>
-          </mat-form-field>
-
-        </mat-card-content>
-        <mat-card-actions>
-          <mat-card-actions align="center">
-            <button mat-raised-button color="primary" [disabled]="!subjectForm.valid">Atualizar</button>
-            <button type="button" mat-raised-button color="warn" (click)="onCancel()">Cancelar</button>
-          </mat-card-actions>
+    <mat-card-title>Atualizar Assunto</mat-card-title>
+    <form
+      [formGroup]="subjectForm"
+      autocomplete="off"
+      novalidate
+      (ngSubmit)="updateSubject(subjectForm.value)"
+      fxLayout="column wrap"
+      fxLayoutAlign="center center"
+      fxLayoutGap="10px"
+    >
+      <mat-card-content>
+        <mat-form-field>
+          <input
+            matInput
+            type="text"
+            placeholder="Nome"
+            formControlName="description"
+            id="description"
+          />
+          <mat-hint align="end">Insira o assunto.</mat-hint>
+          <mat-error *ngIf="hasError('description', 'required')"
+            >Assunto é obrigatório.</mat-error
+          >
+          <mat-error *ngIf="hasError('description', 'maxlength')"
+            >Tamanho máximo permitido 20 caractéres.</mat-error
+          >
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions>
+        <mat-card-actions align="center">
+          <button
+            mat-raised-button
+            color="primary"
+            [disabled]="!subjectForm.valid"
+          >
+            Atualizar
+          </button>
+          <button
+            type="button"
+            mat-raised-button
+            color="warn"
+            (click)="onCancel()"
+          >
+            Cancelar
+          </button>
         </mat-card-actions>
-
-      </form>
-    </mat-card>
+      </mat-card-actions>
+    </form>
+  </mat-card>
 </section>
-
