--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -1,7 +1,7 @@
 <div fxLayout fxLayout.lt-md="column wrap" fxLayoutAlign="center center" fxLayoutGap.gt-sm="250px" fxLayoutGap.lt.md="20px">
-  <mat-form-field>
+  <div>
     <a (click)="openReport(false)" mat-button color="primary">Abrir relaótio</a>
-  </mat-form-field>
+  </div>
   <div>
     <a (click)="openReport(true)" mat-button color="primary">Salvar relatório</a>
   </div>
