Melhorando menssagens de erro.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <section fxLayout="column" fxFlexAlign="stretch">
   <div fxFlexAlign="center">
-    <p>DESAFIO E.D CRUD</p>
+    <p>LIVRARIA DESAFIO EXTREME DIGITAL</p>
   </div>
 
 
