--- a/src/app/shared/dialogs/success-dialog/success-dialog.component.html
+++ b/src/app/shared/dialogs/success-dialog/success-dialog.component.html
@@ -1,7 +1,7 @@
 <section fxLayout="column" fxLayoutAlign="center center">
   <h1 mat-dialog-title>Sucesso</h1>
   <mat-dialog-content>
-    <h2 mat-dialog-title>{{data.successMessage}}</h2>
+    <h4 mat-dialog-title>{{data?.successMessage}}</h4>
   </mat-dialog-content>
   <mat-dialog-actions>
     <button mat-raised-button color="primary" [mat-dialog-close]="true">OK</button>
