--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,6 +3,7 @@ section div p{
   font-size: 30px;
   text-shadow: 2px 3px 5px grey;
   margin: 30px 0;
+  font-family: Roboto;
 }
 
 section div + p{
@@ -10,4 +11,5 @@ section div + p{
   font-weight: bold;
   font-size: 20px;
   padding-bottom: 20px;
+  font-family: Roboto;
 }
